--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "@angular/cli": "~12.2.16",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
