--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["dismissable", "primeflex", "primeicons", "primeng", "Tasky"]
+	"cSpell.words": ["dismissable", "INDIV", "primeflex", "primeicons", "primeng", "Tasky"]
 }
