--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
     "luxon": "^3.0.1",
+    "ngx-paypal": "^9.0.0",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.1",
