--- a/.github/workflows/master_tasky-express.yml
+++ b/.github/workflows/master_tasky-express.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./server
+          path: /server
 
   deploy:
     runs-on: ubuntu-latest
