--- a/.github/workflows/master_tasky-express.yml
+++ b/.github/workflows/master_tasky-express.yml
@@ -21,12 +21,13 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: npm install, build, and test
-        run: |
+      - run: npm install
         working-directory: ./server
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - run: npm run build --if-present
+        working-directory: ./server
+      - run: npm run test --if-present
+        working-directory: ./server
+          
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
