--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server"
   },
   "author": "",
   "license": "ISC"
