--- a/client/angular.json
+++ b/client/angular.json
@@ -22,7 +22,7 @@
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
-						"assets": ["src/favicon.ico", "src/assets"],
+						"assets": ["src/favicon.ico", "src/assets", "web.config"],
 						"styles": [
 							"src/styles.css",
 							"node_modules/primeng/resources/themes/lara-light-blue/theme.css",
@@ -90,7 +90,7 @@
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.spec.json",
 						"karmaConfig": "karma.conf.js",
-						"assets": ["src/favicon.ico", "src/assets"],
+						"assets": ["src/favicon.ico", "src/assets", "web.config"],
 						"styles": ["src/styles.css"],
 						"scripts": []
 					}
