--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,8 @@
 							"node_modules/primeicons/primeicons.css",
 							"node_modules/primeflex/primeflex.css"
 						],
-						"scripts": []
+						"scripts": [
+						]
 					},
 					"configurations": {
 						"production": {
