--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-	"cSpell.words": ["bson", "dismissable", "INDIV", "primeflex", "primeicons", "primeng", "Tasky"]
+	"cSpell.words": [
+		"bson",
+		"dismissable",
+		"INDIV",
+		"PIXELPAPER",
+		"primeflex",
+		"primeicons",
+		"primeng",
+		"Tasky"
+	]
 }
